Facades/js/openui5.template.css
/* ... */
.exf-icon-tile .sapMGTContent {margin-top: -40px}
.exf-tiles > .sapMPanelContent {border-bottom: none;}
.exf-tile {hyphens: auto;}
.exf-tiles > h2, .exf-panel > h2 {margin-top: 1rem;}
.exf-tile > .sapMGTHdrContent.OneByOne > .sapMGTSubHdrTxt > .sapMText {white-space: normal;max-height: 3rem;  display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical;text-overflow: -o-ellipsis-lastline;}
/* Fix remove grayish background on busy-indicator in tile content */
.sapMTileCntContent > .sapMNC  > .sapUiLocalBusyIndicator {background-color: transparent;}
.exf-card-with-tiles .exf-tiles > .sapMPanelContent {padding: 0; margin-top: -6px; margin-left: -6px; overflow: visible;}
.exf-card-with-tiles > .sapMPanelContent {padding: 0;}
html[class*="sapUiTheme-sap_horizon"] .exf-card-with-tiles > .sapMPanelContent {background-color: var(--sapBackgroundColor)}
.exf-card-with-tiles > .sapMPanelContent > .exf-tiles {height: 100% !important}
/* Fix to force 2-column tile menus even on phones with long narrow screens (centering on wider phones) */
html.sapUiMedia-Std-Phone .exf-tiles > .sapMPanelContent {padding-left: 0; padding-right: 0; margin-left: auto; margin-right: auto; width: 23.5rem; max-width: 100%}
/* Panels */
.exf-panel > .sapMPanelContent {border-bottom: none;}

/* Forms */
.sapUiFormTitle:empty {display: none;}
.exf-formcontainer-invisible {padding: 0 !important}
.exf-panel.exf-form-mixed-width .sapUiRespGridMedia-Std-Tablet.sapUiRespGridHSpace0>.sapUiRespGridSpanM12 {padding: 0 0.75rem; box-sizing: border-box;}
.exf-panel.exf-form-mixed-width .sapUiRespGrid {padding-right: 0; padding-left: 0;}
.sapUiRespGrid > div > .sapMMsgStrip {margin: 0px !important;}

/* HTML widgets */
.exf-html {font-size: 0.875rem;}
.sapUiSimpleForm .exf-html h1 {font-size: 1.275rem; font-weight: normal;}
.sapUiSimpleForm .exf-html h2 {font-size: 1.175rem; font-weight: normal;}
.sapUiSimpleForm .exf-html h3 {font-size: 1.075rem; font-weight: normal;}
.sapUiSimpleForm .exf-html h4 {font-size: 1.0rem; font-weight: normal;}

/* QRCode */
.qrcode > img {margin: 0 auto 10px auto;}

/* Image */
img.sapMImg:not(.sapUxAPObjectPageHeaderObjectImage) {display: block; max-width: 100%}

/* Temp. fixes for UI5 issues */
.sapMImageContentImageIcon.sapUiIcon {position: absolute; display: block;}
.sapUiFormM:not(.sapUiFormEdit) .sapUiFormResGridCont>div .sapUiIcon.sapMImageContentImageIcon {font-size: 1.75rem}
/* Image and title in object page layout header to close to page header line in 1.67.1 */
.sapUxAPObjectPageHeaderContent {padding-top: 1rem;}
/* sap.m.Table group header rows barely different from striped rows */
.sapMGHLICell {padding: 0 1rem; border-top: 2px solid #ccc !important; font-weight: bold;}
/* Virtual touch-scrollbar gets too wide on Chrome (see ObjectPageLayout) */
.sapMScrollBarTouch > .sapMScrollBarInnerDiv {width: 0.75rem;}

/* jExcel */
.jexcel_container {width: 100%; padding: 0 !important;}
.jexcel_content {width: 100%; padding: 0 !important;}
table.jexcel {width: 100%; font-size: 0.875rem; border-color: rgb(229, 229, 229)}
table.jexcel.jexcel_overflow {border-top: none; border-left: none;}
.jexcel_row, .jexcel_selectall {padding-left: 5px !important; padding-right: 5px !important; max-width: 4em}
.jexcel>thead.footer>tr>td {background-color: white; font-weight: bold; border-top: 1px solid #666;}
.jexcel td {overflow: hidden; text-overflow: ellipsis;}
.jdropdown-container.slide-bottom-in {bottom: initial !important;}
.jexcel .editor > input {font-family: inherit; font-size: inherit; text-align: inherit !important; padding: 6px;}
/* jExcel style as UI5 tables */
table.jexcel > thead > tr > td {padding-left: 8px; padding-right: 8px; text-align: left !important; font-family: var(--sapFontFamily);}
table.jexcel > tbody > tr, table.jexcel > thead > tr {height: 33px;}
table.jexcel > tbody > tr.selected {background-color: #e5f0fa}
/* input cells: differentiate through darker borders */
table.jexcel > tbody > tr > td:not(:first-child):not(.readonly):not(.highlight-selected) {
    border-left-color: #666;
    border-bottom: 1.5px solid #666;
}
table.jexcel > tbody > tr > td:not(.readonly):not(.highlight-selected) + td.readonly {border-left-color: #89919a;}
table.jexcel > tbody > tr > td:last-child:not(.readonly):not(.highlight-selected) {border-right-color: #89919a}
table.jexcel > thead > tr > td {border-top-color: rgb(140, 140, 140); border-left-color: rgb(140, 140, 140); background-color: #dcdcdc;}
table.jexcel > tbody > tr > td.jexcel_row {background-color: #dcdcdc; border-top-color: rgb(140, 140, 140); border-left-color: rgb(140, 140, 140);}
/*table.jexcel > tbody > tr > td.readonly {color:inherit;}*/
table.jexcel td > input,
table.jexcel td > textarea {font-family: inherit;}
table.jexcel > tbody > tr > td.readonly > input[type=checkbox],
table.jexcel > tbody > tr > td.readonly > input[type=radio] {opacity: 1;}
html.sapUiTheme-sap_fiori_3 table.jexcel td > textarea {padding-top: 10px !important; padding: 2px 4px; margin-bottom: -1px; margin-top: -1px;}

/* adjustments to allow opening dropdowns with single click */
table.jexcel > tbody > tr > td.jexcel_dropdown {
    position: relative;
}

table.jexcel > tbody > tr > td.jexcel_dropdown::after  {
    content: '';
    position: absolute;
    right: 0px;
    top: 0;
    width: 35px;
    height: 100%;
}

/* mark hitbox on hover, class is set dynamically in JexcelTrait */
table.jexcel > tbody > tr > td.jexcel_dropdown.exf-dropdown-hitbox-hover:not(.readonly)::after  {
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0.05);
}

/* flip arrow when dropdown is open */
table.jexcel .jdropdown-default.jdropdown-focus .jdropdown-header {
    background-color: transparent;
    background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath fill='none' d='M0 0h24v24H0V0z'/%3E%3Cpath d='M7 10l5 5 5-5H7z' fill='gray' transform='rotate(180 12 12)'/%3E%3C/svg%3E");
}
/* ... */

